[gd_scene load_steps=54 format=3 uid="uid://kjwii3dmxeqk"]

[ext_resource type="Script" uid="uid://die758t1kg2s7" path="res://backend/roll_editor.gd" id="1_gw0eo"]
[ext_resource type="Script" uid="uid://ehmufl88hplj" path="res://backend/roll_history.gd" id="2_4jwux"]
[ext_resource type="Texture2D" uid="uid://be1cnfjg505tx" path="res://backgrounds/toybox_hdri.exr" id="3_32ohb"]
[ext_resource type="PackedScene" uid="uid://d3gmy8l2rgcb3" path="res://backgrounds/toybox.tscn" id="4_hsq3r"]
[ext_resource type="Script" uid="uid://cfhcd087u5cur" path="res://backend/dice_roller.gd" id="5_7pb30"]
[ext_resource type="PackedScene" uid="uid://jfc0d8f2uivv" path="res://backend/spawnable_dice.tscn" id="6_hob12"]
[ext_resource type="Texture2D" uid="uid://rhrxk0gwu4n" path="res://gui/icons/roll.png" id="7_nwcut"]
[ext_resource type="Script" uid="uid://c1p3i2vn7f2mt" path="res://tools/only_visible_in_editor.gd" id="8_w6b18"]
[ext_resource type="Script" uid="uid://cpqeh2yb2ambq" path="res://backend/score_counter.gd" id="9_k6bty"]
[ext_resource type="Texture2D" uid="uid://d1owem5ltm4mo" path="res://gui/icons/trash.png" id="10_hla7c"]
[ext_resource type="Script" uid="uid://c52xqkn0hid8t" path="res://gui/resize_viewport.gd" id="10_hob12"]
[ext_resource type="Texture2D" uid="uid://dwgpv31ymdegs" path="res://gui/icons/blank_paper.png" id="12_nwcut"]
[ext_resource type="Script" uid="uid://3ue3bxcek8pg" path="res://gui/score_label.gd" id="13_4jwux"]
[ext_resource type="Texture2D" uid="uid://bf4sqt1io0gxp" path="res://gui/icons/hamburger_menu.png" id="13_gw0eo"]
[ext_resource type="Texture2D" uid="uid://bsn7vbld0f6jn" path="res://gui/icons/eye.png" id="13_w6b18"]
[ext_resource type="PackedScene" uid="uid://bilaihhnfqonk" path="res://gui/die_button.tscn" id="14_4jwux"]
[ext_resource type="Texture2D" uid="uid://o4hrbomhvjtr" path="res://gui/icons/settings.png" id="14_coh5o"]
[ext_resource type="Script" uid="uid://dohvloya8v17v" path="res://gui/show_die_scores_button.gd" id="14_k6bty"]
[ext_resource type="Script" uid="uid://msxojpd5tm2p" path="res://gui/roll_editor_panel/roll_editor_panel.gd" id="14_p0y23"]
[ext_resource type="Texture2D" uid="uid://ccaquwst0suip" path="res://gui/icons/d6.png" id="15_32ohb"]
[ext_resource type="Texture2D" uid="uid://yuyqsp6p5u8o" path="res://gui/icons/eye_off.png" id="15_pmmu8"]
[ext_resource type="Texture2D" uid="uid://iheo1d5ii1xb" path="res://gui/icons/d8.png" id="16_hsq3r"]
[ext_resource type="Texture2D" uid="uid://b0mattwx4nh0w" path="res://gui/icons/d10.png" id="17_7pb30"]
[ext_resource type="Texture2D" uid="uid://clflqvkmxp20u" path="res://gui/icons/d12.png" id="18_hob12"]
[ext_resource type="Texture2D" uid="uid://5glox5rl3jh8" path="res://gui/icons/d20.png" id="19_nwcut"]
[ext_resource type="Texture2D" uid="uid://bpd54mwos25ft" path="res://gui/icons/d100.png" id="20_w6b18"]
[ext_resource type="PackedScene" uid="uid://dawwr1mxams3w" path="res://gui/modifier_button.tscn" id="21_k6bty"]
[ext_resource type="Script" uid="uid://brf7o5rhn3fu3" path="res://gui/history_menu.gd" id="23_32ohb"]
[ext_resource type="PackedScene" uid="uid://brhhb2juwnmcd" path="res://gui/roll_history_panel.tscn" id="24_hsq3r"]
[ext_resource type="PackedScene" uid="uid://b52784m3nw14y" path="res://gui/roll_receipt_viewer.tscn" id="25_7pb30"]
[ext_resource type="Script" uid="uid://cfsbgbrm1568s" path="res://gui/background_dimmer.gd" id="26_7pb30"]
[ext_resource type="Script" uid="uid://b8gjjdii4rvf1" path="res://gui/alert.gd" id="26_hsq3r"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_1u8w0"]
panorama = ExtResource("3_32ohb")

[sub_resource type="Sky" id="Sky_h2yge"]
sky_material = SubResource("PanoramaSkyMaterial_1u8w0")

[sub_resource type="Environment" id="Environment_0xm2m"]
background_mode = 2
sky = SubResource("Sky_h2yge")
ambient_light_source = 3
tonemap_mode = 4
adjustment_enabled = true
adjustment_saturation = 1.13

[sub_resource type="BoxShape3D" id="BoxShape3D_0xm2m"]
size = Vector3(19, 2, 17)

[sub_resource type="BoxShape3D" id="BoxShape3D_vivmo"]
size = Vector3(11, 2, 8)

[sub_resource type="BoxShape3D" id="BoxShape3D_2cqfq"]
size = Vector3(12.7275, 2, 15.3787)

[sub_resource type="BoxShape3D" id="BoxShape3D_074og"]
size = Vector3(11, 7, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_w48qg"]
size = Vector3(19, 7, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_ycdy4"]
size = Vector3(2, 7, 16.4167)

[sub_resource type="BoxShape3D" id="BoxShape3D_7pb30"]
size = Vector3(2, 7, 16.3911)

[sub_resource type="BoxMesh" id="BoxMesh_ycdy4"]
size = Vector3(24.255, 1, 25.905)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w48qg"]
albedo_color = Color(1, 0.09, 0.09, 1)
roughness = 0.28

[sub_resource type="CylinderMesh" id="CylinderMesh_w48qg"]
material = SubResource("StandardMaterial3D_w48qg")
top_radius = 2.613
bottom_radius = 2.0
height = 5.575

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vivmo"]
albedo_color = Color(0.0438, 0.73, 0.123857, 1)
roughness = 0.44

[sub_resource type="CylinderMesh" id="CylinderMesh_vivmo"]
material = SubResource("StandardMaterial3D_vivmo")
top_radius = 1.264
bottom_radius = 1.278
height = 3.617

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2cqfq"]
albedo_color = Color(0.00999999, 0.307, 1, 1)
roughness = 0.42

[sub_resource type="BoxMesh" id="BoxMesh_w48qg"]
material = SubResource("StandardMaterial3D_2cqfq")
size = Vector3(3, 3, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yaehf"]
albedo_color = Color(1, 0.770667, 0.14, 1)
roughness = 0.42

[sub_resource type="BoxMesh" id="BoxMesh_074og"]
material = SubResource("StandardMaterial3D_yaehf")
size = Vector3(3, 3, 3)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_w48qg"]
points = PackedVector3Array(0.749539, -1.30048, 1, -0.749539, -1.30048, 1, 0.749539, -1.30048, -1, -0.000146687, 0, -0.000195742, -0.749539, -1.30048, -1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32ohb"]
bg_color = Color(0.632764, 0.603578, 0.463239, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Node3D" type="Node3D"]
physics_interpolation_mode = 1

[node name="roll_editor" type="Node" parent="."]
script = ExtResource("1_gw0eo")

[node name="roll_history" type="Node" parent="."]
script = ExtResource("2_4jwux")

[node name="env" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="env"]
environment = SubResource("Environment_0xm2m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="env"]
transform = Transform3D(0.870167, -0.426741, 0.246379, 0, 0.5, 0.866025, -0.492758, -0.753586, 0.435083, 3.3308, 1.38015, 0)

[node name="collisions" type="StaticBody3D" parent="env"]
transform = Transform3D(1.40477, 0, 0, 0, 1.40477, 0, 0, 0, 1.40477, 0, -0.699434, 0)
collision_mask = 3
input_ray_pickable = false

[node name="floor" type="CollisionShape3D" parent="env/collisions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0251384, -0.507976, -0.976288)
shape = SubResource("BoxShape3D_0xm2m")
debug_color = Color(0.540918, 0.580645, 1.15514e-06, 1)

[node name="ramp" type="CollisionShape3D" parent="env/collisions"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0.0251384, 0.811247, 5.99411)
shape = SubResource("BoxShape3D_vivmo")
debug_color = Color(0.685584, 0.753505, 0, 1)

[node name="ceil" type="CollisionShape3D" parent="env/collisions"]
transform = Transform3D(0.999983, 0, 0, 0, 0.999983, 0, 0, 0, 0.999983, 0.0251384, 6.49202, 2.02371)
shape = SubResource("BoxShape3D_2cqfq")
debug_color = Color(0.618431, 0.626491, 0, 1)

[node name="near_wall" type="CollisionShape3D" parent="env/collisions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0251384, 2.99202, 8.5237)
shape = SubResource("BoxShape3D_074og")
debug_color = Color(0.299099, 0.36011, 1, 1)

[node name="back_wall" type="CollisionShape3D" parent="env/collisions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -4.77064)
shape = SubResource("BoxShape3D_w48qg")
debug_color = Color(0.331994, 0.411547, 1, 1)

[node name="right_wall" type="CollisionShape3D" parent="env/collisions"]
transform = Transform3D(0.999989, 0, 0, 0, 0.999989, 0, 0, 0, 0.999989, 4.48066, 2.992, 2.08325)
shape = SubResource("BoxShape3D_ycdy4")
debug_color = Color(0.243351, 0.375913, 1, 1)

[node name="left_wall" type="CollisionShape3D" parent="env/collisions"]
transform = Transform3D(0.999993, 0, 0, 0, 0.999993, 0, 0, 0, 0.999993, -4.50661, 2.992, 2.01354)
shape = SubResource("BoxShape3D_7pb30")
debug_color = Color(0.243351, 0.375913, 1, 1)

[node name="toybox" parent="env" instance=ExtResource("4_hsq3r")]

[node name="world" type="Node3D" parent="."]
transform = Transform3D(1.40477, 0, 0, 0, 1.40477, 0, 0, 0, 1.40477, 0, 0.614297, 0.569212)
visible = false

[node name="table" type="MeshInstance3D" parent="world"]
mesh = SubResource("BoxMesh_ycdy4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="world"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3.26118, -5.88599)
mesh = SubResource("CylinderMesh_w48qg")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="world"]
transform = Transform3D(0.707107, -0.707107, 0, -3.09086e-08, -3.09086e-08, -1, 0.707107, 0.707107, -4.37114e-08, 1.90304, 1.83638, -6.2261)
mesh = SubResource("CylinderMesh_vivmo")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="world"]
transform = Transform3D(0.865991, -0.50006, 0, -2.18583e-08, -3.78536e-08, -1, 0.50006, 0.865991, -4.37114e-08, 4.71215, 1.74882, -5.61063)
mesh = SubResource("CylinderMesh_vivmo")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="world"]
transform = Transform3D(0.758839, -0.646985, 0.0746528, -2.6077e-08, -0.114625, -0.993409, 0.651278, 0.753838, -0.0869821, 3.58133, 3.97965, -6.13184)
mesh = SubResource("CylinderMesh_vivmo")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="world"]
transform = Transform3D(-0.29989, 0, -0.953974, 0, 1, 0, 0.953974, 0, -0.29989, -6.62242, 2, -5.82331)
mesh = SubResource("BoxMesh_w48qg")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="world"]
transform = Transform3D(0.185003, 0, -0.354646, 0, 0.4, 0, 0.354646, 0, 0.185003, -0.442011, 1.2, -4.3137)
mesh = SubResource("BoxMesh_w48qg")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="world"]
transform = Transform3D(0.522286, 0, -0.351438, 0, 0.629517, 0, 0.351438, 0, 0.522286, 6.77689, 1.43129, -4.56219)
mesh = SubResource("BoxMesh_074og")

[node name="dice_roller" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.294, 4.16051, 8.92048)
script = ExtResource("5_7pb30")

[node name="spawnable_dice" parent="dice_roller" instance=ExtResource("6_hob12")]
process_mode = 4
visible = false

[node name="active_dice" type="Node3D" parent="dice_roller"]

[node name="roll_warmup_timer" type="Timer" parent="dice_roller"]
wait_time = 0.5
one_shot = true

[node name="roll_handful_timer" type="Timer" parent="dice_roller"]
wait_time = 0.5
one_shot = true

[node name="roll_dice_group_timer" type="Timer" parent="dice_roller"]
wait_time = 0.5
one_shot = true

[node name="roll_max_timer" type="Timer" parent="dice_roller"]
wait_time = 3.0
one_shot = true

[node name="spawnpoint_indicator" type="Sprite3D" parent="dice_roller"]
transform = Transform3D(4.1, 0, 0, 0, 4.1, 0, 0, 0, 4.1, 0, 0, 0)
billboard = 1
texture = ExtResource("7_nwcut")
script = ExtResource("8_w6b18")
show_in_game = true

[node name="score_counter" type="Node" parent="."]
script = ExtResource("9_k6bty")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="GUI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
stretch = true
script = ExtResource("10_hob12")

[node name="SubViewport" type="SubViewport" parent="GUI/SubViewportContainer"]
handle_input_locally = false
physics_object_picking = true
physics_object_picking_sort = true
size = Vector2i(360, 360)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="GUI/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.819152, 0.573576, 0, -0.573576, 0.819152, 0, 8.6, 8)
fov = 55.0

[node name="camera_bounds" type="CollisionShape3D" parent="GUI/SubViewportContainer/SubViewport/Camera3D"]
transform = Transform3D(10.9798, 0, 0, 0, -2.38419e-07, -10.9798, 0, 10.9798, -2.38419e-07, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_w48qg")
debug_color = Color(0.585062, 0.585062, 0.585062, 0.352941)

[node name="bottom_panel" type="Panel" parent="GUI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.493056
anchor_right = 1.0
anchor_bottom = 1.00139
offset_top = 5.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="GUI/bottom_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/bottom_panel/MarginContainer"]
layout_mode = 2

[node name="top_row" type="Control" parent="GUI/bottom_panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="settings_button" type="Button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/top_row"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
icon = ExtResource("14_coh5o")

[node name="clear_board_button" type="Button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/top_row"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 59.0
offset_top = -20.0
offset_right = 99.0
offset_bottom = 20.0
grow_vertical = 2
icon = ExtResource("12_nwcut")

[node name="show_die_scores_button" type="Button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/top_row"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -20.0
offset_right = -61.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("15_pmmu8")
script = ExtResource("14_k6bty")
shown_icon = ExtResource("13_w6b18")
hidden_icon = ExtResource("15_pmmu8")

[node name="score_label" type="Label" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/top_row"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -11.5
offset_right = 14.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 63
text = "0"
script = ExtResource("13_4jwux")

[node name="history_menu_button" type="Button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/top_row"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("13_gw0eo")

[node name="HSeparator" type="HSeparator" parent="GUI/bottom_panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="roll_editor_panel" type="VBoxContainer" parent="GUI/bottom_panel/MarginContainer/VBoxContainer" node_paths=PackedStringArray("roll_editor", "die_buttons")]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("14_p0y23")
roll_editor = NodePath("../../../../../roll_editor")
die_buttons = {
0: NodePath("dice_row_1/d4_die_button"),
1: NodePath("dice_row_1/d6_die_button"),
2: NodePath("dice_row_1/d8_die_button"),
3: NodePath("dice_row_1/d10_die_button"),
4: NodePath("dice_row_2/d12_die_button"),
5: NodePath("dice_row_2/d20_die_button"),
6: NodePath("dice_row_2/d100_die_button")
}

[node name="dice_row_1" type="HBoxContainer" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel"]
layout_mode = 2
alignment = 1

[node name="d4_die_button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_1" instance=ExtResource("14_4jwux")]
layout_mode = 2

[node name="d6_die_button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_1" instance=ExtResource("14_4jwux")]
layout_mode = 2
die_type = 1

[node name="TextureRect" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_1/d6_die_button" index="0"]
texture = ExtResource("15_32ohb")

[node name="d8_die_button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_1" instance=ExtResource("14_4jwux")]
layout_mode = 2
die_type = 2

[node name="TextureRect" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_1/d8_die_button" index="0"]
texture = ExtResource("16_hsq3r")

[node name="d10_die_button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_1" instance=ExtResource("14_4jwux")]
layout_mode = 2
die_type = 3

[node name="TextureRect" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_1/d10_die_button" index="0"]
texture = ExtResource("17_7pb30")

[node name="dice_row_2" type="HBoxContainer" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel"]
layout_mode = 2
alignment = 1

[node name="d12_die_button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_2" instance=ExtResource("14_4jwux")]
layout_mode = 2
die_type = 4

[node name="TextureRect" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_2/d12_die_button" index="0"]
texture = ExtResource("18_hob12")

[node name="d20_die_button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_2" instance=ExtResource("14_4jwux")]
layout_mode = 2
die_type = 5

[node name="TextureRect" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_2/d20_die_button" index="0"]
texture = ExtResource("19_nwcut")

[node name="Label" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_2/d20_die_button" index="1"]
size_flags_stretch_ratio = 0.81

[node name="d100_die_button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_2" instance=ExtResource("14_4jwux")]
layout_mode = 2
die_type = 6

[node name="TextureRect" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_2/d100_die_button" index="0"]
texture = ExtResource("20_w6b18")

[node name="bottom_row" type="HBoxContainer" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel"]
layout_mode = 2
alignment = 1

[node name="delete_button" type="Button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/bottom_row"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("10_hla7c")
icon_alignment = 1
expand_icon = true

[node name="seperator2" type="Control" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/bottom_row"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="modifier_button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/bottom_row" instance=ExtResource("21_k6bty")]
layout_mode = 2

[node name="seperator" type="Control" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/bottom_row"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="roll_button" type="Button" parent="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/bottom_row"]
layout_mode = 2
icon = ExtResource("7_nwcut")

[node name="history_menu" type="Control" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("23_32ohb")

[node name="Panel" type="Panel" parent="GUI/history_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = 26.0
offset_right = -19.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2

[node name="roll_history_panel" parent="GUI/history_menu/Panel" instance=ExtResource("24_hsq3r")]
visible = false
layout_mode = 1

[node name="roll_receipt_viewer" parent="GUI/history_menu/Panel" instance=ExtResource("25_7pb30")]
visible = false
layout_mode = 1

[node name="background_dimmer" type="Control" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("26_7pb30")

[node name="ColorRect" type="ColorRect" parent="GUI/background_dimmer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.745098)

[node name="alert" type="Control" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 44.0
offset_top = 252.0
offset_right = -44.0
offset_bottom = -252.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("26_hsq3r")

[node name="Panel" type="Panel" parent="GUI/alert"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_32ohb")

[node name="MarginContainer" type="MarginContainer" parent="GUI/alert/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="alert_label" type="Label" parent="GUI/alert/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[connection signal="changed" from="roll_editor" to="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel" method="update"]
[connection signal="finalized" from="roll_editor" to="dice_roller" method="roll_dice"]
[connection signal="entry_added" from="roll_history" to="GUI/history_menu/Panel/roll_history_panel" method="add_row"]
[connection signal="replay_requested" from="roll_history" to="roll_editor" method="replay_roll"]
[connection signal="die_locked" from="dice_roller" to="roll_editor" method="subtract_die"]
[connection signal="die_unlocked" from="dice_roller" to="roll_editor" method="add_die"]
[connection signal="error_with_roll" from="dice_roller" to="GUI/alert" method="show_alert"]
[connection signal="old_roll_done" from="dice_roller" to="roll_history" method="add_entry"]
[connection signal="scoring_requested" from="dice_roller" to="score_counter" method="count_score"]
[connection signal="timeout" from="dice_roller/roll_handful_timer" to="dice_roller" method="_on_roll_handful_timeout"]
[connection signal="timeout" from="dice_roller/roll_dice_group_timer" to="dice_roller" method="_on_roll_dice_group_timeout"]
[connection signal="timeout" from="dice_roller/roll_max_timer" to="dice_roller" method="_on_roll_max_timeout"]
[connection signal="score_counted" from="score_counter" to="GUI/bottom_panel/MarginContainer/VBoxContainer/top_row/score_label" method="display"]
[connection signal="pressed" from="GUI/bottom_panel/MarginContainer/VBoxContainer/top_row/clear_board_button" to="dice_roller" method="clear_board"]
[connection signal="pressed" from="GUI/bottom_panel/MarginContainer/VBoxContainer/top_row/show_die_scores_button" to="dice_roller" method="toggle_die_score_visibility"]
[connection signal="pressed" from="GUI/bottom_panel/MarginContainer/VBoxContainer/top_row/history_menu_button" to="GUI/history_menu" method="show_menu"]
[connection signal="pressed" from="GUI/bottom_panel/MarginContainer/VBoxContainer/top_row/history_menu_button" to="GUI/history_menu/Panel/roll_history_panel" method="show_history"]
[connection signal="pressed" from="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/bottom_row/delete_button" to="roll_editor" method="clear"]
[connection signal="decrement_pressed" from="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/bottom_row/modifier_button" to="roll_editor" method="decrement_modifier"]
[connection signal="increment_pressed" from="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/bottom_row/modifier_button" to="roll_editor" method="increment_modifier"]
[connection signal="pressed" from="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/bottom_row/roll_button" to="roll_editor" method="finalize"]
[connection signal="clear_pressed" from="GUI/history_menu/Panel/roll_history_panel" to="roll_history" method="clear"]
[connection signal="delete_pressed" from="GUI/history_menu/Panel/roll_history_panel" to="roll_history" method="remove_entry"]
[connection signal="exit_pressed" from="GUI/history_menu/Panel/roll_history_panel" to="GUI/history_menu" method="hide_menu"]
[connection signal="expand_pressed" from="GUI/history_menu/Panel/roll_history_panel" to="GUI/history_menu/Panel/roll_receipt_viewer" method="open_receipt"]
[connection signal="replay_pressed" from="GUI/history_menu/Panel/roll_history_panel" to="roll_history" method="replay"]
[connection signal="replay_pressed" from="GUI/history_menu/Panel/roll_history_panel" to="GUI/history_menu" method="hide_menu" unbinds=1]
[connection signal="closed" from="GUI/history_menu/Panel/roll_receipt_viewer" to="GUI/history_menu/Panel/roll_history_panel" method="show_history"]
[connection signal="clicked" from="GUI/background_dimmer" to="GUI/alert" method="hide_alert"]
[connection signal="alert_hidden" from="GUI/alert" to="GUI/background_dimmer" method="hide_dimmer"]
[connection signal="alert_shown" from="GUI/alert" to="GUI/background_dimmer" method="show_dimmer"]

[editable path="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_1/d6_die_button"]
[editable path="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_1/d8_die_button"]
[editable path="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_1/d10_die_button"]
[editable path="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_2/d12_die_button"]
[editable path="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_2/d20_die_button"]
[editable path="GUI/bottom_panel/MarginContainer/VBoxContainer/roll_editor_panel/dice_row_2/d100_die_button"]
